tried fixing the horizontal scrollbar

--- a/resources/css/portfolio-queries.css
+++ b/resources/css/portfolio-queries.css
@@ -152,7 +152,9 @@
 }
 
 @media only screen and (max-width: 480px){
-	body,html{overflow-x: hidden}
+	body,html{
+		overflow-x: hidden;
+	}
 	.introduction{
 	width: 100%;
 	padding-right: 3%;
@@ -169,5 +171,16 @@
 	.introduction p{
 		font-size: 100%;
 	}
+
+	nav ul li a{
+		display: block;
+		float:none;
+		font-size: 15px;
+		margin-top: 35%;
+		padding-right: 150%;
+		text-align: justify;
+	}
+	nav ul li a:hover{
+	color: #D0D0D0;
 
 }
